--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,22 @@ audio {
     margin: 0 0;
 }
 
+.button-container button{
+    font-size: 18px;
+    font-weight: 500;
+    background: rgb(170, 170, 170);
+    color: #000000;
+    padding: 10px 30px;
+    border-radius: 30px;
+    margin: 30px 0 10px;
+    border: 1px solid #000000;
+    transition: 1s;
+}
+
+button:hover{
+    background-color:rgb(221, 221, 221);
+}
+
 .control, #current{
     height: 100%;
     display: flex;
